# DotFiles

./: .gitignore  .gitmodules  README.md  bootstrap.sh  custom_commands.vim  general_settings.vim  home.nix  nvim.nix  rename-padded-numbers.nix  shell.nix  shellAliases.nix  slower.nix
.vim/: fuzens_config.vim  init.vim
doom.d/: config.el  init.el
programs/: alacritty.nix  aria2.nix  chromium.nix  config.nix  firefox.nix  git.nix  shellAliases.nix  ssh.nix  tmux.nix
programs/neovim/: config.nix  general_settings.vim  key_binds.vim
programs/neovim/dark_mode.vim/: Cargo.toml  dark_mode_vim.nix
programs/neovim/dark_mode.vim/plugin/: neovim-dark_mode.vim
programs/neovim/dark_mode.vim/src/: main.rs
services/: config.nix  gpg-agent.nix
xsession/: config.nix  i3.nix
